--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,204 @@
-anyio==3.6.2
+argcomplete==2.0.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-attrs==22.1.0
+arrow==1.2.2
+asttokens==2.0.5
+attrs==21.4.0
+autopep8==1.7.0
+aws-lambda-builders==1.17.0
+aws-sam-cli==1.52.0
+aws-sam-translator==1.46.0
+awscli==1.24.8
+Babel==2.8.0
 backcall==0.2.0
+bcrypt==3.2.0
 beautifulsoup4==4.11.1
-bleach==5.0.1
-cffi==1.15.1
-comm==0.1.2
-debugpy==1.6.4
+binaryornot==0.4.4
+bleach==5.0.0
+blinker==1.4
+boto3==1.23.3
+botocore==1.26.3
+Brlapi==0.8.4
+certifi==2022.6.15
+cffi==1.15.0
+chardet==4.0.0
+chevron==0.14.0
+chrome-gnome-shell==0.0.0
+click==7.1.2
+colorama==0.4.5
+command-not-found==0.3
+contourpy==1.0.6
+cookiecutter==1.7.3
+cryptography==3.4.8
+cupshelpers==1.0
+cycler==0.11.0
+dateparser==1.1.1
+dbus-python==1.2.18
+debugpy==1.6.0
 decorator==5.1.1
+defer==1.0.6
 defusedxml==0.7.1
+distro==1.7.0
+distro-info==1.1+ubuntu1
+docker==4.2.2
+docutils==0.17.1
+duplicity==0.8.22
 entrypoints==0.4
-executing==1.2.0
-fastjsonschema==2.16.2
-fqdn==1.5.1
-idna==3.4
-ipykernel==6.19.3
-ipython==8.7.0
+evdev==1.6.0
+executing==0.8.3
+fasteners==0.17.3
+fastjsonschema==2.15.3
+Flask==1.1.4
+fonttools==4.38.0
+future==0.18.2
+ghp-import==2.1.0
+greenlet==1.1.2
+html5lib==1.1
+httplib2==0.20.4
+idna==3.3
+importlib-metadata==4.6.4
+iniconfig==1.1.1
+ipykernel==6.13.0
+ipython==8.3.0
 ipython-genutils==0.2.0
-ipywidgets==8.0.3
-isoduration==20.11.0
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-jsonpointer==2.3
-jsonschema==4.17.3
+ipywidgets==7.7.0
+itsdangerous==1.1.0
+jedi==0.18.1
+jeepney==0.8.0
+Jinja2==2.11.3
+jinja2-time==0.2.0
+jmespath==1.0.1
+joblib==1.1.0
+jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter-events==0.5.0
-jupyter_client==7.4.8
-jupyter_core==5.1.0
-jupyter_server==2.0.1
-jupyter_server_terminals==0.4.3
+jupyter-client==7.3.1
+jupyter-console==6.4.3
+jupyter-core==4.10.0
 jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.4
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.6
-mistune==2.0.4
-nbclassic==0.4.8
-nbclient==0.7.2
-nbconvert==7.2.7
-nbformat==5.7.1
-nest-asyncio==1.5.6
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy==1.24.0
-packaging==22.0
-pandas==1.5.2
+jupyterlab-widgets==1.1.0
+keyring==23.8.2
+kiwisolver==1.4.4
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+libevdev==0.5
+livereload==2.6.3
+lockfile==0.12.2
+louis==3.22.0
+lunr==0.6.2
+lxml==4.9.1
+Mako==1.1.3
+Markdown==3.4.1
+MarkupSafe==2.0.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.3
+mergedeep==1.3.4
+mistune==0.8.4
+mkdocs==1.3.0
+monotonic==1.6
+more-itertools==8.10.0
+msgpack==1.0.3
+nbclient==0.6.3
+nbconvert==6.5.0
+nbformat==5.4.0
+nest-asyncio==1.5.5
+netifaces==0.11.0
+nltk==3.7
+notebook==6.4.11
+numpy==1.22.4
+oauthlib==3.2.0
+olefile==0.46
+packaging==21.3
+pandas==1.4.2
 pandocfilters==1.5.0
+paramiko==2.10.4
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-platformdirs==2.6.0
-prometheus-client==0.15.0
-prompt-toolkit==3.0.36
-psutil==5.9.4
+Pillow==9.2.0
+pipx==1.0.0
+pluggy==1.0.0+repack
+poyo==0.5.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.29
+psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.10.0
+pyasn1==0.4.8
+pycairo==1.20.1
+pycodestyle==2.9.1
 pycparser==2.21
-Pygments==2.13.0
-pyrsistent==0.19.2
+pycups==2.0.1
+Pygments==2.12.0
+PyGObject==3.42.2
+pyinotify==0.9.6
+PyJWT==2.4.0
+PyNaCl==1.5.0
+pynvim==0.4.2
+pyparsing==3.0.7
+pyrsistent==0.18.1
+pytest==7.1.2
+python-apt==2.3.0+ubuntu2.1
 python-dateutil==2.8.2
-python-json-logger==2.0.4
-pytz==2022.7
-PyYAML==6.0
-pyzmq==24.0.1
-qtconsole==5.4.0
-QtPy==2.3.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-scikit-learn==1.2.0
-scipy==1.9.3
+python-debian==0.1.46
+python-magic==0.4.26
+python-slugify==6.1.2
+pytz==2022.2.1
+pyudev==0.22.0
+pyxdg==0.27
+PyYAML==5.4.1
+pyyaml_env_tag==0.1
+pyzmq==23.0.0
+qtconsole==5.3.0
+QtPy==2.1.0
+regex==2021.9.30
+reportlab==3.6.11
+requests==2.27.1
+roman==3.3
+rsa==4.8
+s3transfer==0.6.0
+scikit-learn==1.1.2
+scipy==1.9.1
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.3
 Send2Trash==1.8.0
+serverlessrepo==0.1.10
+setproctitle==1.2.2
+simplejson==3.17.6
 six==1.16.0
-sklearn==0.0.post1
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-stack-data==0.6.2
-terminado==0.17.1
+sklearn==0.0
+soupsieve==2.3.2
+ssh-import-id==5.11
+stack-data==0.2.0
+systemd-python==235
+terminado==0.15.0
+text-unidecode==1.3
 threadpoolctl==3.1.0
-tinycss2==1.2.1
+tinycss2==1.1.1
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.7.2
 tornado==6.2
-traitlets==5.8.0
-uri-template==1.2.0
+tqdm==4.64.0
+traitlets==5.2.1.post0
+typing-extensions==3.10.0.0
+tzlocal==3.0
+ubuntu-advantage-tools==27.12
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.9
+usb-creator==0.3.7
+userpath==1.8.0
+wadllib==1.3.6
+watchdog==2.1.2
 wcwidth==0.2.5
-webcolors==1.12
 webencodings==0.5.1
-websocket-client==1.4.2
-widgetsnbextension==4.0.4
+websocket-client==1.3.3
+Werkzeug==1.0.1
+widgetsnbextension==3.6.0
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
